--- a/views/end.ejs
+++ b/views/end.ejs
@@ -1,33 +1,34 @@
-<!-- End screen after completing survey -->
 <%- include('./partials/head.ejs') %>
 
-  <section class="carousel">
+  <!-- <section class="carousel"> -->
+  <form method='post' action='/results'>
 
     <ol>
 
-      <li class="end">
+      <!---------- FIRST PAGE ----------->
+      <li id="index">
         <%- include('./partials/header.ejs') %>
 
-          <section class='content'>
+          <fieldset>
             <span class="endVoortgang"></span>
 
-            <fieldset>
-              <h1>Verzonden</h1>
-              <h2>Bedankt voor het invullen van de enquête!</h2>
+            <h1>Verzonden</h1>
+            <h2>Bedankt voor het invullen van de enquête!</h2>
 
-              <a class='endLink' href="https://www.google.com/">
-                <p>Verder gaan met het leven</p>
-              </a>
-            </fieldset>
-          </section>
-
+            <a class='endLink' href="https://www.google.com/">
+              <p>Verder gaan met het leven</p>
+            </a>
+          </fieldset>
       </li>
+
     </ol>
-  </section>
+
+  </form>
+
+  </body>
 
   <!-- <%- include('./partials/footer.ejs') %> -->
 
   </main>
-  </body>
 
   </html>
