--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,12 +10,16 @@
   </title>
 
   <!-- <link rel="icon" type="image/png" sizes="16x16" href="/images/gifinder_favicon.png"> -->
-  <link href="/styles/style.css" rel="stylesheet" />
+  <!-- <link href="/styles/style.css" rel="stylesheet" /> -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+  <link href="/styles/testtt.css" rel="stylesheet" />
 
   <script defer src="scripts/script.js"></script>
 
 </head>
 
-<main>
 
-  <body>
+<body>
+
+  <main>
