--- a/public/styles/testtt.css
+++ b/public/styles/testtt.css
@@ -24,6 +24,55 @@ main {
 
 
 /******************************/
+/*         TYPOGRAPHY         */
+/******************************/
+h1,
+h2,
+h3,
+p,
+label,
+input,
+button {
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1 {
+  font-size: 1.35em;
+  font-weight: 600;
+  margin-bottom: 1.5em;
+}
+
+h2 {
+  font-size: 1.15em;
+  font-weight: 600;
+  margin-bottom: 1.5em;
+}
+
+h3,
+p,
+label {
+  font-size: 1em;
+  font-weight: 400;
+}
+
+input[type=text],
+input[type=number] {
+  font-size: 0.85em;
+}
+
+
+input[type=button],
+input[type=submit] {
+  font-size: 1em;
+  font-weight: 400;
+}
+
+
+#login h1:nth-of-type(2) {
+  margin-bottom: 0.5em;
+}
+
+/******************************/
 /*            FORM            */
 /******************************/
 form {
@@ -66,24 +115,209 @@ li {
   height: auto;
   overflow-y: scroll;
   background-color: #ffffff;
-  padding: 30px;
 }
 
 
 /******************************/
 /*           HEADER          */
 /******************************/
+header {
+  margin: 0 auto;
+  width: 50%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 20px;
+}
 
+header svg {
+  width: 35px;
+  height: auto;
+}
+
+header h1 {
+  font-size: 1.5em;
+  margin: 0;
+}
 
 
 /******************************/
-/*           FIELDSET          */
+/*          FIELDSET          */
 /******************************/
 fieldset {
   border: none;
+  padding: 30px;
+  width: auto;
+}
+
+
+/******************************/
+/*           SECTION          */
+/******************************/
+section {
+  width: auto;
+  height: auto;
+  margin-top: 30px;
 }
 
 
 /******************************/
 /*        PROGRESS BAR        */
 /******************************/
+/* full bar */
+span {
+  position: relative;
+  left: 1.25em;
+  width: 84.5%;
+  height: 1em;
+  border-radius: 25px;
+  background-color: #E0E0E0;
+}
+
+/* black bar */
+span::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 1em;
+  border-radius: 25px;
+  background-color: #000000;
+}
+
+/* black bar width */
+.loginVoortgang::before {
+  width: 1em;
+}
+
+.wafsVoortgang::before {
+  width: 14%;
+}
+
+.cssttrVoortgang::before {
+  width: 28%;
+}
+
+.pwaVoortgang::before {
+  width: 42%;
+}
+
+.btVoortgang::before {
+  width: 57%;
+}
+
+.rtwVoortgang::before {
+  width: 71%
+}
+
+.hcdVoortgang::before {
+  width: 85%;
+}
+
+
+
+/******************************/
+/*           LABELS           */
+/******************************/
+label {
+  margin-bottom: 0.35em;
+}
+
+
+
+/******************************/
+/*        INPUT FIELDS        */
+/******************************/
+input[type=text],
+input[type=number] {
+  height: 2.25em;
+  /* box-shadow: -3px 3px 0px rgba(0, 0, 0, 0.25); */
+  background-color: #E0E0E0;
+  border-style: none;
+  border-radius: 20px;
+  padding: 2px 15px;
+}
+
+
+input[type=text] {
+  margin-bottom: 1.5em;
+}
+
+
+input::placeholder {
+  font-size: 0.85em;
+  color: #6F6F6F;
+}
+
+
+/******************************/
+/*    RADIO BUTTONS SECTION   */
+/******************************/
+fieldset > div {
+  display: flex;
+  flex-direction: column;
+  margin: 1em 0;
+}
+
+
+/******************************/
+/*           BUTTONS          */
+/******************************/
+input[type=button],
+input[type=submit] {
+  width: 7rem;
+  height: 2rem;
+  border-style: none;
+  border-radius: 20px;
+  background-color: #E0E0E0;
+  margin: 1em 0 2em 0;
+
+  /* remove default safari styles */
+  -webkit-appearance: none;
+}
+
+a {
+  width: 7rem;
+  height: 2rem;
+}
+
+fieldset > a:first-of-type {
+  position: relative;
+  top: 32px;
+  align-self: flex-start;
+}
+
+fieldset > a:last-of-type {
+  position: relative;
+  top: 0;
+  align-self: flex-end;
+  margin-bottom: 4em;
+}
+
+
+/******************************/
+/*           FOOTER           */
+/******************************/
+/* footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 4em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+
+
+/******************************/
+/*         VALIDATION         */
+/******************************/
+.valid {
+  box-shadow: -3px 3px 0px rgba(127, 205, 123, 1);
+}
+
+.error {
+  box-shadow: -3px 3px 0px rgba(255, 94, 94, 1);
+}
