--- a/public/styles/testtt.css
+++ b/public/styles/testtt.css
@@ -77,7 +77,7 @@ input[type=submit] {
 /******************************/
 form {
   position: relative;
-  top: 3em;
+  top: 1em;
   width: 70%;
   height: auto;
   margin: 0 auto;
@@ -96,7 +96,7 @@ ol {
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 40em;
+  height: 38em;
   border-radius: 20px;
   overflow-x: hidden;
 }
@@ -122,13 +122,13 @@ li {
 /*           HEADER          */
 /******************************/
 header {
-  margin: 0 auto;
-  width: 50%;
-  height: auto;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  width: 10em;
+  height: 4em;
+  margin: 0 auto;
   margin-top: 20px;
 }
 
@@ -138,7 +138,7 @@ header svg {
 }
 
 header h1 {
-  font-size: 1.5em;
+  font-size: 2.25em;
   margin: 0;
 }
 
@@ -159,22 +159,24 @@ fieldset {
 section {
   width: auto;
   height: auto;
-  margin-top: 30px;
+  margin-top: 35px;
 }
 
 
 /******************************/
 /*        PROGRESS BAR        */
 /******************************/
-/* full bar */
+
 span {
+  display: block;
   position: relative;
-  left: 1.25em;
-  width: 84.5%;
+  top: 0.5em;
+  width: inherit;
   height: 1em;
   border-radius: 25px;
   background-color: #E0E0E0;
 }
+
 
 /* black bar */
 span::before {
@@ -214,6 +216,10 @@ span::before {
 
 .hcdVoortgang::before {
   width: 85%;
+}
+
+.endVoortgang::before {
+  width: 100%;
 }
 
 
@@ -300,15 +306,15 @@ fieldset > a:last-of-type {
 /******************************/
 /*           FOOTER           */
 /******************************/
-/* footer {
+footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 4em;
+  height: 6em;
   display: flex;
   justify-content: center;
   align-items: center;
-} */
+}
 
 
 /******************************/
