--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -6,6 +6,8 @@
   padding: 0;
 }
 
+
+
 /* body */
 body {
   background-color: #34A8E0;
@@ -78,7 +80,7 @@ input[type=submit] {
 form {
   position: relative;
   top: 1em;
-  width: 70%;
+  width: 80%;
   height: auto;
   margin: 0 auto;
 }
@@ -88,19 +90,16 @@ form {
 /*             LIST           */
 /******************************/
 ol {
-  /* display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  height: 30em; */
   position: relative;
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 38em;
+  height: 34em;
   border-radius: 20px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
+/* Firefox  scrollbar is hidden on body up top */
 
 /******************************/
 /*         LIST ITEMS         */
@@ -115,6 +114,15 @@ li {
   height: auto;
   overflow-y: scroll;
   background-color: #ffffff;
+
+  /* hide scrollbars Firefox*/
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+/* hide scrollbars Chrome & Safari */
+::-webkit-scrollbar {
+  display: none;
 }
 
 
@@ -157,9 +165,12 @@ fieldset {
 /*           SECTION          */
 /******************************/
 section {
+  display: flex;
+  flex-direction: column;
   width: auto;
   height: auto;
   margin-top: 35px;
+  margin-bottom: 35px;
 }
 
 
@@ -227,9 +238,9 @@ span::before {
 /******************************/
 /*           LABELS           */
 /******************************/
-label {
-  margin-bottom: 0.35em;
-}
+/* label {
+
+} */
 
 
 
@@ -239,11 +250,11 @@ label {
 input[type=text],
 input[type=number] {
   height: 2.25em;
-  /* box-shadow: -3px 3px 0px rgba(0, 0, 0, 0.25); */
   background-color: #E0E0E0;
   border-style: none;
   border-radius: 20px;
   padding: 2px 15px;
+  margin-top: 0.35em;
 }
 
 
@@ -261,7 +272,7 @@ input::placeholder {
 /******************************/
 /*    RADIO BUTTONS SECTION   */
 /******************************/
-fieldset > div {
+section > div {
   display: flex;
   flex-direction: column;
   margin: 1em 0;
@@ -289,17 +300,16 @@ a {
   height: 2rem;
 }
 
-fieldset > a:first-of-type {
+section > a:first-of-type {
   position: relative;
-  top: 32px;
+  top: 21px;
   align-self: flex-start;
 }
 
-fieldset > a:last-of-type {
+section > a:last-of-type {
   position: relative;
-  top: 0;
+  top: -10px;
   align-self: flex-end;
-  margin-bottom: 4em;
 }
 
 
@@ -314,6 +324,35 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+
+/******************************/
+/*         FIRST PAGE         */
+/******************************/
+#index section {
+  text-align: center;
+}
+
+#index a {
+  align-self: center;
+}
+
+
+/******************************/
+/*          END PAGE          */
+/******************************/
+#end section {
+  text-align: center;
+}
+
+#end a {
+  align-self: center;
+  font-size: 0.75em;
+  font-weight: 600;
+  line-height: 1.5em;
+  color: #000000;
+  margin-top: 275px;
 }
 
 
