:wrench: Fixed id name

--- a/views/end.ejs
+++ b/views/end.ejs
@@ -12,7 +12,7 @@
           <ol>
 
             <!---------- END PAGE ----------->
-            <li id="index">
+            <li id="end">
               <fieldset>
                 <span class="endVoortgang"></span>
 
