--- a/views/enquete.ejs
+++ b/views/enquete.ejs
@@ -7,7 +7,7 @@
       <main>
 
         <!-- <section class="carousel"> -->
-        <form method='post' action='/results'>
+        <form method='post' action='/results' novalidate>
 
           <ol>
 
@@ -176,7 +176,7 @@
                     </a>
 
                     <!-- SUBMIT BUTTON -->
-                    <a href="">
+                    <a href="/end">
                       <input id="submitButton" type="submit" value='Versturen'>
                     </a>
                     <!-- </div> -->
