--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -366,3 +366,78 @@ footer {
 .error {
   box-shadow: -3px 3px 0px rgba(255, 94, 94, 1);
 }
+
+
+
+/******************************/
+/*       BIGGER SCREENS       */
+/******************************/
+@media screen and (min-width: 700px) and (max-width: 900px) {
+
+  /* form */
+  form {
+    width: 70%;
+  }
+
+
+  /* list */
+  /* ol {
+    height: 34em;
+  } */
+}
+
+@media screen and (min-width: 900px) and (max-width: 1250px) {
+
+  /* form */
+  form {
+    width: 55%;
+  }
+
+
+  /* list */
+  /* ol {
+    height: 34em;
+  } */
+}
+
+@media screen and (min-width: 1250px) and (max-width: 1450px) {
+
+  /* form */
+  form {
+    width: 45%;
+  }
+
+
+  /* list */
+  /* ol {
+    height: 34em;
+  } */
+}
+
+@media screen and (min-width: 1450px) and (max-width: 1800px) {
+
+  /* form */
+  form {
+    width: 35%;
+  }
+
+
+  /* list */
+  /* ol {
+    height: 34em;
+  } */
+}
+
+@media screen and (min-width: 1800px) and (max-width: 2500px) {
+
+  /* form */
+  form {
+    width: 25%;
+  }
+
+
+  /* list */
+  ol {
+    height: 44em;
+  }
+}
