--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -7,7 +7,6 @@
 }
 
 
-
 /* body */
 body {
   background-color: #34A8E0;
@@ -32,6 +31,7 @@ h1,
 h2,
 h3,
 p,
+a,
 label,
 input,
 button {
@@ -62,17 +62,16 @@ input[type=number] {
   font-size: 0.85em;
 }
 
-
 input[type=button],
 input[type=submit] {
   font-size: 1em;
   font-weight: 400;
 }
 
-
 #login h1:nth-of-type(2) {
   margin-bottom: 0.5em;
 }
+
 
 /******************************/
 /*            FORM            */
@@ -99,7 +98,6 @@ ol {
   overflow: hidden;
 }
 
-/* Firefox  scrollbar is hidden on body up top */
 
 /******************************/
 /*         LIST ITEMS         */
@@ -177,7 +175,6 @@ section {
 /******************************/
 /*        PROGRESS BAR        */
 /******************************/
-
 span {
   display: block;
   position: relative;
@@ -187,7 +184,6 @@ span {
   border-radius: 25px;
   background-color: #E0E0E0;
 }
-
 
 /* black bar */
 span::before {
@@ -234,16 +230,6 @@ span::before {
 }
 
 
-
-/******************************/
-/*           LABELS           */
-/******************************/
-/* label {
-
-} */
-
-
-
 /******************************/
 /*        INPUT FIELDS        */
 /******************************/
@@ -257,11 +243,9 @@ input[type=number] {
   margin-top: 0.35em;
 }
 
-
 input[type=text] {
   margin-bottom: 1.5em;
 }
-
 
 input::placeholder {
   font-size: 0.85em;
@@ -357,6 +341,68 @@ footer {
 
 
 /******************************/
+/*        RESULT PAGE         */
+/******************************/
+#results div {
+  display: flex;
+  justify-content: center;
+  align-self: flex-start;
+  width: 50%;
+  height: 4em;
+  padding: 4px 20px;
+  border-radius: 25px;
+  background-color: #E0E0E0;;
+}
+
+#results a {
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: #000000;
+}
+
+#results h2 {
+  margin-top: 1em;
+  line-height: 0;
+}
+
+
+/******************************/
+/*        DETAILS PAGE        */
+/******************************/
+#details div {
+  display: flex;
+  justify-content: center;
+  align-self: flex-start;
+  width: 75%;
+  height: auto;
+  padding: 20px;
+  border-radius: 25px;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  background-color: #E0E0E0;;
+}
+
+#details div:first-of-type {
+  margin-top: 5em;
+}
+
+#details h1,
+#details h2 {
+  margin-bottom: 0.25em;
+}
+
+#details p {
+  margin-bottom: 1.5em;
+}
+
+#details a {
+  align-self: flex-start;
+  color: #000000;
+}
+
+
+/******************************/
 /*         VALIDATION         */
 /******************************/
 .valid {
@@ -368,7 +414,6 @@ footer {
 }
 
 
-
 /******************************/
 /*       BIGGER SCREENS       */
 /******************************/
@@ -378,13 +423,8 @@ footer {
   form {
     width: 70%;
   }
-
-
-  /* list */
-  /* ol {
-    height: 34em;
-  } */
 }
+
 
 @media screen and (min-width: 900px) and (max-width: 1250px) {
 
@@ -392,13 +432,8 @@ footer {
   form {
     width: 55%;
   }
-
-
-  /* list */
-  /* ol {
-    height: 34em;
-  } */
 }
+
 
 @media screen and (min-width: 1250px) and (max-width: 1450px) {
 
@@ -406,13 +441,8 @@ footer {
   form {
     width: 45%;
   }
-
-
-  /* list */
-  /* ol {
-    height: 34em;
-  } */
 }
+
 
 @media screen and (min-width: 1450px) and (max-width: 1800px) {
 
@@ -420,13 +450,8 @@ footer {
   form {
     width: 35%;
   }
-
-
-  /* list */
-  /* ol {
-    height: 34em;
-  } */
 }
+
 
 @media screen and (min-width: 1800px) and (max-width: 2500px) {
 
